--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-bootstrap": "^1.0.0-beta.15",
     "react-dom": "^16.11.0",
     "react-helmet": "^5.2.1",
+    "react-router-dom": "^5.1.2",
     "react-slick": "^0.25.2",
     "shufflejs": "^5.2.3",
     "slick-carousel": "^1.8.1"
