--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "bootstrap": "^4.3.1",
     "gatsby": "^2.17.11",
+    "jquery": "^3.4.1",
     "react": "^16.11.0",
     "react-bootstrap": "^1.0.0-beta.15",
     "react-dom": "^16.11.0",
