--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "dependencies": {
     "bootstrap": "^4.3.1",
     "gatsby": "^2.17.11",
+    "gatsby-plugin-netlify-cms": "^4.1.31",
     "jquery": "^3.4.1",
+    "netlify-cms-app": "^2.9.7",
     "react": "^16.11.0",
     "react-bootstrap": "^1.0.0-beta.15",
     "react-dom": "^16.11.0",
