--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "gatsby-plugin-netlify-cms": "^4.1.31",
     "jquery": "^3.4.1",
     "netlify-cms-app": "^2.9.7",
+    "nuka-carousel": "^4.6.6",
     "react": "^16.11.0",
     "react-bootstrap": "^1.0.0-beta.15",
     "react-dom": "^16.11.0",
     "react-helmet": "^5.2.1",
+    "react-image-gallery": "^1.0.6",
     "react-router-dom": "^5.1.2",
     "react-slick": "^0.25.2",
     "shufflejs": "^5.2.3",
